--- a/src/style.css
+++ b/src/style.css
@@ -10,8 +10,9 @@ a {
 }
 .weather-app {
   background-color: #848484;
-  
+
   max-width: 390px;
+  height: 844px;
   margin: 15px auto;
   padding: 15px;
   border-radius: 10px;
@@ -27,7 +28,7 @@ a {
 .search-button {
   border: none;
   background-color: #000000;
- 
+
   color: #ffffff;
   border-radius: 5px;
   width: 20%;
@@ -67,24 +68,22 @@ main {
   display: flex;
   justify-content: space-around;
 }
-.time-of-day {
+.day-of-week {
   font-size: 12px;
   text-align: center;
-  color:#ffffff;
-  rgba(0, 0, 0, 0.7);
-
+  color: #ffffff;
 }
 .hour-temp {
   font-size: 14px;
   font-weight: 500;
   text-align: center;
-  color:#ffffff;
+  color: #ffffff;
 }
 .weather-icon {
   font-size: 30px;
-  background-color: #F0EFEF;
+  background-color: #f0efef;
   border-radius: 10px;
-  padding: 2.5px 5px;
+  padding: 5px 5px;
   margin: 20px auto;
 }
 .weeks-forecast-details {
