--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@ a {
   background-color: #848484;
 
   max-width: 390px;
-  height: 844px;
+
   margin: 15px auto;
   padding: 15px;
   border-radius: 10px;
@@ -27,7 +27,7 @@ a {
 }
 .search-button {
   border: none;
-  background-color: #000000;
+  background-color: rgba(0, 0, 0, 0.5);
 
   color: #ffffff;
   border-radius: 5px;
@@ -54,7 +54,6 @@ main {
 .main-weather {
   display: flex;
   justify-content: center;
-  
 }
 .main-weather-icon {
   font-size: 40px;
